@@ -1282,7 +1282,8 @@ class CTrigger extends CTriggerGeneral {
 				'expression' => null,
 				'error' => 'Trigger just added. No status update so far.',
 				'value' => TRIGGER_VALUE_FALSE,
-				'value_flags' => TRIGGER_VALUE_FLAG_UNKNOWN
+				'value_flags' => TRIGGER_VALUE_FLAG_UNKNOWN,
+				'lastchange' => time()
 			);
 		}
 
